Fixing vertical height of offer-carousel and blog-carousel using flex-1 and align-items: stretch on container CSS - don't want to risk applying this to every carousel

--- a/partials/components/product-card.html
+++ b/partials/components/product-card.html
@@ -48,7 +48,7 @@
     </a>
     <div class="flex flex-col items-start gap-2 md:p-5 p-4 border border-brand-border-light rounded-xl bg-white">
       <div class="badge-text">Image Skincare</div>
-      <h1 class="heading-secondary text-base">VOL.U.LIFT Face Firming Cream - 57g</h1>
+      <h1 class="heading-secondary text-base line-clamp-2">VOL.U.LIFT Face Firming Cream - 57g</h1>
 
       <!-- Radio card select -->
       <div x-data="{ selected: 'option1' }" class="flex md:flex-row flex-col gap-2 w-full">
