--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -615,7 +615,7 @@
                                   class="w-full aspect-4/3 object-cover transition-transform duration-300 group-hover:scale-105">
                               </div>
                               <div class="py-3">
-                                <h4 class="text-[8px] uppercase tracking-wide font-bold text-brand-primary-700"
+                                <h4 class="text-[10px] uppercase tracking-wide font-bold text-brand-primary-700"
                                   x-text="card.title"></h4>
                                 <span class="inline-flex items-center mt-1 text-xxs font-bold uppercase tracking-wide text-brand-dark group-hover:underline transition-colors">
                                   <span x-text="card.button.text"></span>
@@ -631,11 +631,11 @@
                     <!-- Footer Links -->
                     <div class="bg-brand-background-secondary px-5 py-6">
                       <ul class="flex flex-col gap-5">
-                        <li><a href="/about" class="text-xs font-bold tracking-wide uppercase text-brand-dark">About Us</a></li>
-                        <li><a href="/contact" class="text-xs font-bold tracking-wide uppercase text-brand-dark">Contact</a></li>
-                        <li><a href="/faq" class="text-xs font-bold tracking-wide uppercase text-brand-dark">FAQ</a></li>
-                        <li><a href="/terms" class="text-xs font-bold tracking-wide uppercase text-brand-dark">Terms & Conditions</a></li>
-                        <li><a href="/sitemap" class="text-xs font-bold tracking-wide uppercase text-brand-dark">Sitemap</a></li>
+                        <li><a href="/about" class="text-xs font-bold tracking-wide uppercase text-brand-dark w-full block">About Us</a></li>
+                        <li><a href="/contact" class="text-xs font-bold tracking-wide uppercase text-brand-dark w-full block">Contact</a></li>
+                        <li><a href="/faq" class="text-xs font-bold tracking-wide uppercase text-brand-dark w-full block">FAQ</a></li>
+                        <li><a href="/terms" class="text-xs font-bold tracking-wide uppercase text-brand-dark w-full block">Terms & Conditions</a></li>
+                        <li><a href="/sitemap" class="text-xs font-bold tracking-wide uppercase text-brand-dark w-full block">Sitemap</a></li>
                       </ul>
                     </div>
                   </div>
