--- a/partials/home/blog-carousel.html
+++ b/partials/home/blog-carousel.html
@@ -1,11 +1,18 @@
 <style>
   .article-slide {
     width: 280px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
   }
   @media (min-width: 1024px) {
     .article-slide {
       width: auto;
     }
+  }
+  /* Blog Carousel Equal Height Slides */
+  .blog-swiper .swiper-wrapper {
+    align-items: stretch;
   }
 </style>
 
@@ -56,17 +63,19 @@
           </button>
 
           <!-- Swiper Container -->
-          <div x-ref="swiper" class="swiper flex-1 overflow-hidden right-overflow-visible-lg">
+          <div x-ref="swiper" class="swiper blog-swiper flex-1 overflow-hidden right-overflow-visible-lg">
             <div class="swiper-wrapper">
               <!-- Card-->
               <div class="swiper-slide article-slide">
                 <a href="/products" class="block relative rounded-xl overflow-hidden mb-2 group">
                   <img src="/assets/placeholder-jennie.png" alt="" class="w-full lg:aspect-4/3 aspect-square object-cover group-hover:scale-105 transition-transform duration-300">
                 </a>
-                <div class="flex flex-col items-start gap-3 p-5 border border-brand-border-light rounded-xl bg-white">
-                  <div class="badge-primary">Face</div>
-                  <h1 class="heading-secondary md:text-base text-sm">How Excessive Product</h1>
-                  <p>Buy 10 and get 6 free. Mix and match and get the cheapest free of charge!</p>
+                <div class="flex-1 justify-between flex flex-col items-start gap-3 p-5 border border-brand-border-light rounded-xl bg-white">
+                  <div class="flex flex-col items-start gap-3 ">
+                    <div class="badge-primary">Face</div>
+                    <h1 class="heading-secondary md:text-base text-sm line-clamp-2">How Excessive Product</h1>
+                    <p>Buy 10 and get 6 free. Mix and match and get the cheapest free of charge!</p>
+                  </div>
                   <a href="#" class="button-text-icon">
                     <span>Read More</span>
                     <span class="icon icon-arrow"></span>
@@ -79,10 +88,12 @@
                   <a href="/products" class="block relative rounded-xl overflow-hidden mb-2 group">
                     <img src="/assets/placeholder-jennie.png" alt="" class="w-full lg:aspect-4/3 aspect-square object-cover group-hover:scale-105 transition-transform duration-300">
                   </a>
-                  <div class="flex flex-col items-start gap-3 p-5 border border-brand-border-light rounded-xl bg-white">
-                    <div class="badge-primary">Face</div>
-                    <h1 class="heading-secondary md:text-base text-sm">How Excessive Product Layering Can Sabotage Your Skin</h1>
-                    <p>Buy 10 and get 6 free. Mix and match and get the cheapest free of charge!</p>
+                  <div class="flex-1 justify-between flex flex-col items-start gap-3 p-5 border border-brand-border-light rounded-xl bg-white">
+                    <div class="flex flex-col items-start gap-3 ">
+                      <div class="badge-primary">Face</div>
+                      <h1 class="heading-secondary md:text-base text-sm line-clamp-2">How Excessive Product Layering Can Sabotage Your Skin</h1>
+                      <p>Buy 10 and get 6 free. Mix and match and get the cheapest free of charge!</p>
+                    </div>
                     <a href="#" class="button-text-icon">
                       <span>Read More</span>
                       <span class="icon icon-arrow"></span>
