--- a/partials/home/blog-carousel.html
+++ b/partials/home/blog-carousel.html
@@ -67,8 +67,8 @@
             <div class="swiper-wrapper">
               <!-- Card-->
               <div class="swiper-slide article-slide">
-                <a href="/products" class="block relative rounded-xl overflow-hidden mb-2 group">
-                  <img src="/assets/placeholder-jennie.png" alt="" class="w-full lg:aspect-4/3 aspect-square object-cover group-hover:scale-105 transition-transform duration-300">
+                <a href="/products" class="block relative rounded-xl overflow-hidden mb-2 group lg:aspect-4/3 aspect-square">
+                  <img src="/assets/placeholder-jennie.png" alt="" loading="lazy" decoding="async" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-300">
                 </a>
                 <div class="flex-1 justify-between flex flex-col items-start gap-3 p-5 border border-brand-border-light rounded-xl bg-white">
                   <div class="flex flex-col items-start gap-3 ">
@@ -85,8 +85,8 @@
               <template x-for="i in 9" :key="i">
                 <!-- Card-->
                 <div class="swiper-slide article-slide">
-                  <a href="/products" class="block relative rounded-xl overflow-hidden mb-2 group">
-                    <img src="/assets/placeholder-jennie.png" alt="" class="w-full lg:aspect-4/3 aspect-square object-cover group-hover:scale-105 transition-transform duration-300">
+                  <a href="/products" class="block relative rounded-xl overflow-hidden mb-2 group lg:aspect-4/3 aspect-square">
+                    <img src="/assets/placeholder-jennie.png" alt="" loading="lazy" decoding="async" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-300">
                   </a>
                   <div class="flex-1 justify-between flex flex-col items-start gap-3 p-5 border border-brand-border-light rounded-xl bg-white">
                     <div class="flex flex-col items-start gap-3 ">
