--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -51,7 +51,7 @@
       <!-- Rounded blocks container (always horizontal) -->
       <div class="flex md:gap-3 gap-0 w-full min-h-18">
         <!-- Rounded block 1 -->
-        <div :class="(navigationMenuOpen || searchDropdownOpen) && 'rounded-t-3xl'"
+        <div :class="(navigationMenuOpen || searchDropdownOpen) && 'rounded-t-3xl rounded-b-none'"
           class="relative xl:grow grow-0 flex duration-200 justify-between items-center md:px-5 px-2 md:gap-8 gap-2 xl:border border-brand-border xl:bg-brand-light rounded-3xl">
           <a class="block text-teal-600" href="/">
             <span class="sr-only">Home</span>
