--- a/app.css
+++ b/app.css
@@ -64,7 +64,7 @@
     @apply md:rounded-3xl rounded-2xl mb-3 xl:py-16 xl:px-16 lg:py-8 lg:px-8 px-3 pt-5 pb-3 border border-brand-border bg-brand-light;
   }
   .card-container-small {
-    @apply md:rounded-3xl rounded-2xl border mb-3 xl:px-6 xl:py-6 px-3 pt-5 pb-3 border-brand-border bg-brand-light;
+    @apply md:rounded-3xl rounded-2xl border mb-3 xl:px-5 xl:py-5 px-3 pt-5 pb-3 border-brand-border bg-brand-light;
   }
   .card-container-generic {
     @apply md:rounded-3xl rounded-2xl border border-brand-border bg-brand-light;
@@ -115,7 +115,7 @@
 
   /* LINKS */
   .basic-link {
-    @apply text-xxs font-bold uppercase tracking-wide text-brand-primary-700 hover:underline;
+    @apply text-xxs font-bold uppercase tracking-wide text-brand-primary-700 hover:underline cursor-pointer;
   }
 
   /* ---------------------------- */
