--- a/partials/home/hero.html
+++ b/partials/home/hero.html
@@ -57,7 +57,7 @@
                   </a>
                   -->
                   <a href="#" class="button-primary-icon">
-                    Join Now
+                    <span class="button-text" data-text="Join Now"><span>Join Now</span></span>
                     <span>
                       <span class="icon-arrow"></span>
                     </span>
