Adding button animations sitewide

--- a/partials/components/product-card-simple.html
+++ b/partials/components/product-card-simple.html
@@ -13,7 +13,7 @@
     <h1 class="heading-secondary text-sm">VOL.U.LIFT Face Firming Cream - 57g</h1>
 
     <a href="/products" class="button-primary w-full">
-      View offer
+      <span class="button-text" data-text="View offer"><span>View offer</span></span>
     </a>
   </div>
 </div>
