--- a/partials/components/product-card.html
+++ b/partials/components/product-card.html
@@ -108,7 +108,7 @@
       </div>
 
       <a href="/products" class="button-primary w-full">
-        View offer
+        <span class="button-text" data-text="View offer"><span>View offer</span></span>
       </a>
     </div>
   </div>
