--- a/partials/home/collections.html
+++ b/partials/home/collections.html
@@ -19,7 +19,7 @@
 
         <div class="flex md:flex-row flex-col gap-3 mt-2 md:w-auto w-full">
           <a href="#" class="button-secondary">
-            View all categories
+            <span class="button-text" data-text="View all categories"><span>View all categories</span></span>
           </a>
         </div>
       </div>
