--- a/partials/home/hero.html
+++ b/partials/home/hero.html
@@ -63,7 +63,7 @@
                     </span>
                   </a>
                   <a href="#" class="button-transparent">
-                    Sign in
+                    <span class="button-text" data-text="Sign in"><span>Sign in</span></span>
                   </a>
                   <!--
                   <a href="#" class="button-transparent-icon">
