--- a/partials/home/offer-carousel.html
+++ b/partials/home/offer-carousel.html
@@ -26,7 +26,7 @@
 
         <div class="flex md:flex-row flex-col gap-3 mt-2 md:w-auto w-full">
           <a href="#" class="button-secondary">
-            View all offers
+            <span class="button-text" data-text="View all offers"><span>View all offers</span></span>
           </a>
         </div>
       </div>
@@ -78,7 +78,7 @@
                     <p>Buy 10 and get 6 free. Mix and match and get the cheapest free of charge!</p>
                   </div>
                   <a href="#" class="button-primary w-full mt-2">
-                    Join Now
+                    <span class="button-text" data-text="Join Now"><span>Join Now</span></span>
                   </a>
                 </div>
               </div>
@@ -94,7 +94,7 @@
                     <p>Professional-grade microneedling devices at special prices for registered practitioners.</p>
                   </div>
                   <a href="#" class="button-primary w-full mt-2">
-                    Join Now
+                    <span class="button-text" data-text="Join Now"><span>Join Now</span></span>
                   </a>
                 </div>
               </div>
@@ -110,7 +110,7 @@
                     <p>Receive a complimentary consultation kit when you spend £500 or more.</p>
                   </div>
                   <a href="#" class="button-primary w-full mt-2">
-                    Join Now
+                    <span class="button-text" data-text="Join Now"><span>Join Now</span></span>
                   </a>
                 </div>
               </div>
@@ -126,7 +126,7 @@
                     <p>Discover the latest mineral sunscreen products for your clinic.</p>
                   </div>
                   <a href="#" class="button-primary w-full mt-2">
-                    Join Now
+                    <span class="button-text" data-text="Join Now"><span>Join Now</span></span>
                   </a>
                 </div>
               </div>
