--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -358,11 +358,11 @@
           class="shrink-0 xl:grow-0 grow flex items-center justify-end md:gap-4 gap-2 md:px-5 px-2 py-2 xl:border border-brand-border xl:bg-brand-light rounded-3xl">
           <div class="flex gap-2">
             <a href="#" class="button-secondary">
-              Sign in
+              <span class="button-text" data-text="Sign in"><span>Sign in</span></span>
             </a>
 
             <a href="#" class="button-primary">
-              Join Now
+              <span class="button-text" data-text="Join Now"><span>Join Now</span></span>
             </a>
           </div>
 
