--- a/partials/home/COMPONENTS.html
+++ b/partials/home/COMPONENTS.html
@@ -6,37 +6,37 @@
     <div class="grid w-full grid-cols-2  bg-neutral-400 rounded-xl p-8">
       <div class="flex flex-col items-start gap-4">
         <a href="#" class="button-primary">
-          Click Me
+          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
         </a>
         <a href="#" class="button-primary-icon">
-          Click Me
+          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
           <span>
             <span class="icon-arrow"></span>
           </span>
         </a>
         <a href="#" class="button-transparent">
-          Click Me
+          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
         </a>
         <a href="#" class="button-transparent-icon">
-          Click Me
+          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
           <span>
             <span class="icon-arrow"></span>
           </span>
         </a>
         <a href="#" class="button-secondary">
-          Click Me
+          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
         </a>
         <a href="#" class="button-secondary-icon">
-          Click Me
+          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
           <span>
             <span class="icon-arrow"></span>
           </span>
         </a>
         <a href="#" class="button-tertiary">
-          Click Me
+          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
         </a>
         <a href="#" class="button-tertiary-icon">
-          Click Me
+          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
           <span>
             <span class="icon-arrow"></span>
           </span>
@@ -54,37 +54,37 @@
       </div>
       <div class="flex flex-col max-w-xs gap-4">
         <a href="#" class="button-primary">
-          Click Me
+          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
         </a>
         <a href="#" class="button-primary-icon">
-          Click Me
+          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
           <span>
             <span class="icon-arrow"></span>
           </span>
         </a>
         <a href="#" class="button-transparent">
-          Click Me
+          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
         </a>
         <a href="#" class="button-transparent-icon">
-          Click Me
+          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
           <span>
             <span class="icon-arrow"></span>
           </span>
         </a>
         <a href="#" class="button-secondary">
-          Click Me
+          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
         </a>
         <a href="#" class="button-secondary-icon">
-          Click Me
+          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
           <span>
             <span class="icon-arrow"></span>
           </span>
         </a>
         <a href="#" class="button-tertiary">
-          Click Me
+          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
         </a>
         <a href="#" class="button-tertiary-icon">
-          Click Me
+          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
           <span>
             <span class="icon-arrow"></span>
           </span>
