--- a/partials/alpine-store.html
+++ b/partials/alpine-store.html
@@ -1,7 +1,7 @@
 <script>
   document.addEventListener('alpine:init', () => {
     Alpine.store('prototype', {
-      loggedIn: true
+      loggedIn: false
     })
   })
 </script>
