Moving admin-bar to navigation so it's just on every page

--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -21,6 +21,9 @@
   }
 </style>
 
+<!-- Admin Bar -->
+<load src="partials/admin-bar.html" />
+
 <!-- Announcement bar -->
 <div class="md:px-4 md:mt-2 mb-3" x-data="{
   announcements: [
