Reverting to original colour scheme but fixing logo placement before merge

--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -58,7 +58,7 @@
           class="relative xl:grow grow-0 flex duration-200 justify-between items-center md:px-5 px-2 md:gap-8 gap-2 xl:border border-brand-border xl:bg-brand-light rounded-3xl">
           <a class="block text-teal-600" href="/">
             <span class="sr-only">Home</span>
-            <img src="/assets/wigmore-medical-logo.png" alt="" class="max-h-14">
+            <img src="/assets/wigmore-medical-logo.png" alt="" class="max-w-20">
             <!-- <img src="/assets/wm-logo-w.png" alt="" class="max-w-16"> -->
             <!-- <svg class="md:size-14 size-12" width="54" height="30" viewBox="0 0 54 30" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
@@ -366,10 +366,10 @@
           <div>
             <!-- Logged out -->
             <div x-show="!$store.prototype.loggedIn" class="flex gap-2">
-              <a href="#" class="button-secondary">
+              <a href="#" class="button-secondary md:px-6 px-2">
                 <span class="button-text" data-text="Sign in"><span>Sign in</span></span>
               </a>
-              <a href="#" class="button-primary">
+              <a href="#" class="button-primary md:px-6 px-2">
                 <span class="button-text" data-text="Join Now"><span>Join Now</span></span>
               </a>
             </div>
